05. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- restore normal cursor on save new created catalog fixed
	- empty media name if auto mount is disabled fixed

23. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- scan cdrom path if not automount fixed

21. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- context menu option for changing media type added
	- save as now adds history item

10. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- unsharp search option in find dialog added

05. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- crash caused divide by zero fixed

04. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- advanced disk catalog import info added
	- csv import added (WhereIsIt, see README_IMPORT for details)
	- jump to selected item in find dialog fixed
	- dont open export dialog if no catalog is open
	- xml export added

03. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- reading utfs encoding fixed
	- possibility for cancel searching added
	- possibility for cancel openening catalog added
	- made extra colum for size at result listview at search dialog
	- sizes of busy dialog adjusted
	- file archivist catalog import added (thanks to martin brunner)
	- csv import added (Advanced Disk Catalog)
	- displaying units fixed

02. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- qmake project file order changed (workaround for qmake bug)
	- development/release information in info dialog
	- unit translation fixes
	- use better description on search button at find dialog
	- initial defaults for search options (start date, end date, min size, max size) set to disabled
	- initial defaults for search options (min size type, max size type) set to MiB
	- initial defaults for search options (min size, max size) set to 1, 10
	- set cursor to busy cursor at save, saveas, open and add actions
	- process events if nessary at open catalog
	- workaround for displaying rubberband again
	- show edit category menu entry in context menu